@@ -78,6 +78,9 @@ public class SecurityConfig {
                         .requestMatchers("/auth/**").permitAll()
                         .anyRequest().permitAll()); // 테스트 종료시 authentication()으로 변경
 
+        http.cors(cors -> cors.configurationSource(corsConfiguration()));
+//        http.cors(cors -> cors.disable());
+
         http.sessionManagement(sessionManagement -> sessionManagement
                         .sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .formLogin(formLogin -> formLogin.disable())
@@ -94,11 +97,14 @@ public class SecurityConfig {
     public CorsConfigurationSource corsConfiguration() {
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
 
+        // 5173
+
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of("*"));
+        config.setAllowedOrigins(List.of("https://fluo-fe.pages.dev:443/",
+                "http://localhost:5173", "https://project-application.shop:443"));
         config.setAllowCredentials(true);
         config.setAllowedMethods(List.of("GET", "POST", "DELETE", "PATCH", "PUT"));
-        config.setAllowedHeaders(Collections.singletonList("*"));
+        config.setAllowedHeaders(List.of("*"));
         config.setExposedHeaders(Collections.singletonList("Set-Cookies"));
         config.setMaxAge(3600L);
 
